--- a/mirage_site/templates/pool.html
+++ b/mirage_site/templates/pool.html
@@ -3,8 +3,8 @@
 
 {% block crumbs %}
     <li><a href="/">Home</a></li>
-    <li><a href="#">Search Results</a></li>
-    <li><a href="#">Pool {{ pool_number }}</a></li>
+    <li><a href="#">Search Results</li>
+    <li>Pool {{ pool_number }}</li>
 {% endblock %}
 
 {% block content %}
