--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -2,12 +2,71 @@
 
 {% block header %}
 
+<div id="breadcrumb_container">
+    <div id="breadcrumbs">
+        <ul id="crumbs">
+
+    <li><a href="/">Home</a></li>
+    <li><a href="#">Search Results</a></li>
+    <li><a href="#">Pool {{ pool_number }}</a></li>
+    <li>Vendor 123 Professional Services</li>
+
+    </div><!--end breadcrumbs<!-->
+ </div><!--end breadcrumb_container<!-->
 {% endblock header %}
 
 {% block body %}
 
-    <div id="main_container">
-        <h1>Vendor detail page</h1>
-    </div>
+ <div id="vendor_main_container">
+        
+        <div class="vendor_title_status_container">
+	        <div class="vendor_title">ABC Professional Services</div>
+	        <div class="debarred_status">DEBARRED</div>
+        </div><!--end vendor_title_status_container<!-->
+
+        <div id="vendor_admin_container">
+
+        	<div id="vendor_admin_c1">
+        		<div id="vendor_sam_expiration_container">
+        			<span class="vendor_sam_expiration_text">SAM Registration Expires:</span>
+        			<span class="vendor_sam_expiration_date">5/3/2014</span> 
+        			<span class="vendor_sam_expiration_notice">EXPIRED!</span>        			
+        		</div><!--end vendor_sam_expiration_container<!-->
+
+        		<div id="vendor_socioeconomic_table_container">
+        			test
+        		</div><!--end vendor_socioeconomic_table_container<!-->
+        	</div><!--end vendor_admin_c1<!-->
+
+        	<div id="vendor_admin_c2">
+        		<div id="vendor_c1_info">
+        			TABLE OR SPAN CLASSES?  			
+        		</div><!--end vendor_c1_info<!-->
+        	</div><!--end vendor_admin_c2<!-->
+
+        	<div id="vendor_admin_c3">
+        		TABLE OR SPAN CLASSES? 
+        	</div><!--end vendor_admin_c3<!-->
+
+        </div><!--end vendor_admin_container<!-->
+
+
+        <div id="vendor_contract_history_container">
+        	<div class="vendor_contract_history_title_container">
+        		<span class="vendor_contract_history_text">This vendor's contract history for</span>
+        		<span class="vendor_contract_history_naics">NAICS 123456</span>
+        	</div><!--end vendor_contract_history_title_container<!-->
+
+        	<div id="vendor_ch_table">
+        		Table 
+        	</div><!--end vendor_ch_table<!-->
+
+        </div><!--end vendor_contract_history_container<!-->
+
+
+
+
+
+ </div><!--end vendor_main_container<!-->
 
 {% endblock body %}
