fixes filter hovering, closes issue #85

--- a/mirage_site/templates/pool.html
+++ b/mirage_site/templates/pool.html
@@ -3,7 +3,7 @@
 
 {% block crumbs %}
     <li><a href="/">Home</a></li>
-    <li><a href="#">Search Results</li>
+    <li><a href="#">Search Results</a></li>
     <li>Pool {{ pool_number }}</li>
 {% endblock %}
 
