--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -195,4 +195,6 @@
 
  </div><!--end vendor_main_container<!-->
 
+<script src="{% static 'mirage_site/js/vendor.js' %}" type="text/javascript"></script>
+
 {% endblock body %}
