added logic for debarred status display and a dollar sign to annual revenue

--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -486,6 +486,7 @@ a.pool_link {
     font-weight:600;
 }
 .debarred_status    {
+    display:none;
     font-size:1.6em;
     float:left;
     margin-left:10px;
