- added 8(a) and HUBZone indicators to pool detail page and vendor detail page - added CAGE code to vendor detail page

--- a/mirage_site/templates/pool.html
+++ b/mirage_site/templates/pool.html
@@ -34,6 +34,12 @@
                         <td class="h_wo">
                             WO
                         </td>
+                        <td class="h_8a">
+                            8(a)
+                        </td>
+                        <td class="h_hubz">
+                            HubZ
+                        </td>
                     </tr>
                 </table>
             </div>
