ordered socioeconomic indicators to match FAR ordering

--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -39,10 +39,10 @@
                 <table id="socioeconomic_indicators">
                     <tr>
                         <td>
-                            VO
+                            8(a)
                         </td>
-                        <td >
-                            SDB
+                        <td>
+                            HubZ
                         </td>
                         <td>
                             SDVO
@@ -51,10 +51,10 @@
                             WO
                         </td>
                         <td>
-                            8A
+                            VO
                         </td>
-                        <td>
-                            Hubz
+                        <td >
+                            SDB
                         </td>
                     </tr>                    
                 </table>
