--- a/mirage_site/templates/pool.html
+++ b/mirage_site/templates/pool.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div id="your_search_criteria">
-    <span class="your_search_grey">your search: </span><span id="your_search" class="your_search_blue">541330 - Engineering Services</span>
+    <span class="your_search_grey">showing vendors in: </span><span id="your_search" class="your_search_blue">541330 - Engineering Services</span>
 
     <span class="your_search_grey">filters: </span><span id="your_filters" class="your_search_blue">veteran owned, hubzone</span>
 </div>
