--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -95,7 +95,7 @@
 
         	<div id="vendor_admin_c3">
         			<p class="admin_title">Vendor Contact Information</p>
-        		    <p class="lh"><span class="admin_label"></span>Address: <span class="vendor_address1 admin_data2">123 Contractor Springs Drive</span></p>
+        		    <p class="lh"><span class="admin_label"></span><span class="vendor_address1 admin_data2">123 Contractor Springs Drive</span></p>
         		    <p class="lh"><span class="admin_label"></span><span class="vendor_address2 admin_data2">Virginia Beach, VA 12345</span></p>
         			<p class="lh"><span class="admin_label"></span><span class="vendor_poc_name admin_data2">Jerry "T-Bone" Contractorsen</span></p>
         			<p class="lh"><span class="admin_label"></span><span class="vendor_poc_phone admin_data2">123-456-7890</span></p>
