added vendor contact info

--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -10,7 +10,7 @@
     <li><a href="/">Home</a></li>
     <li><a href="#">Search Results</a></li>
     <li><a href="#">Pool {{ pool_number }}</a></li>
-    <li id="vendor_breadcrumb">ABC Professional Services</li>
+    <li id="vendor_breadcrumb"></li>
 
     </div><!--end breadcrumbs<!-->
  </div><!--end breadcrumb_container<!-->
@@ -21,7 +21,7 @@
  <div id="vendor_main_container">
         
         <div id="vendor_title_status_container">
-	        <div class="vendor_title">ABC Professional Services</div>
+	        <div class="vendor_title"></div>
 	        <div class="debarred_status"> <<< WARNING: DEBARRED!</div>
         </div><!--end vendor_title_status_container<!-->
 
@@ -67,9 +67,9 @@
         		<div id="vendor_c1_info">
         			<p class="admin_title">Vendor Admin Information</p>
         			<p class="lh"><span class="admin_label">DUNS:</span> <span class="duns_number admin_data"></span></p>
-        			<p class="lh"><span class="admin_label">CAGE Code:</span> <span class="cage_code admin_data">N/A</span></p>
-        			<p class="lh"><span class="admin_label">Employees:</span> <span class="number_of_employees admin_data">*160000</span></p>
-        			<p class="lh"><span class="admin_label">Annual Revenue:</span> <span class="annual_revenue admin_data">*$340000</span></p>
+        			<p class="lh"><span class="admin_label">CAGE Code:</span> <span class="cage_code admin_data"></span></p>
+        			<p class="lh"><span class="admin_label">Employees:</span> <span class="number_of_employees admin_data"></span></p>
+        			<p class="lh"><span class="admin_label">Annual Revenue:</span> <span class="annual_revenue admin_data"></span></p>
         		</div><!--end vendor_c1_info<!-->
         	</div><!--end vendor_admin_c2<!-->
 
