--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -30,7 +30,7 @@
         	<div id="vendor_admin_c1">
         		<div id="vendor_sam_expiration_container">
         			<span class="vendor_sam_expiration_text">SAM Registration Expires on:</span>
-        			<span class="vendor_sam_expiration_date">5/3/2014</span> 
+        			<span class="vendor_sam_expiration_date"></span> 
         			<span class="vendor_sam_expiration_notice">EXPIRED!</span>        			
         		</div><!--end vendor_sam_expiration_container<!-->
 
