--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -8,8 +8,8 @@
         <ul id="crumbs">
 
     <li><a href="/">Home</a></li>
-    <li><a href="#">Search Results</a></li>
-    <li><a href="#">Pool {{ pool_number }}</a></li>
+    <li class="crumb_nonactive">Search Results</a></li>
+    <li class="crumb_nonactive">Pool {{ pool_number }}</li>
     <li id="vendor_breadcrumb"></li>
 
     </div><!--end breadcrumbs<!-->
