--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -77,9 +77,9 @@
         			<p class="admin_title">Vendor Contact Information</p>
         		    <p class="lh"><span class="admin_label"></span><span class="vendor_address1 admin_data2"></span></p>
         		    <p class="lh"><span class="admin_label"></span><span class="vendor_address2 admin_data2"></span></p>
-        			<p class="lh"><span class="admin_label"></span><span class="vendor_poc_name admin_data2">*Jerry "T-Bone" Contractorsen</span></p>
-        			<p class="lh"><span class="admin_label"></span><span class="vendor_poc_phone admin_data2">*123-456-7890</span></p>
-        			<p class="lh"><span class="admin_label"></span><span class="vendor_poc_email admin_data2"><a href="mailto:jerry.tbone.contractorsen@hotmail.com">*jerry.tbone.contractorsen@hotmail.com</a></span></p>
+        			<p class="lh"><span class="admin_label"></span><span class="vendor_poc_name admin_data2"></span></p>
+        			<p class="lh"><span class="admin_label"></span><span class="vendor_poc_phone admin_data2"></span></p>
+        			<p class="lh"><span class="admin_label"></span><span class="vendor_poc_email admin_data2"></span></p>
         	</div><!--end vendor_admin_c3<!-->
 
         </div><!--end vendor_admin_container<!-->
