naics filtering on contract table

--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -87,8 +87,8 @@
 
         <div id="vendor_contract_history_container">
         	<div id="vendor_contract_history_title_container">
-        		<span class="vendor_contract_history_text">This vendor's contract history for</span>
-        		<span class="vendor_contract_history_naics">NAICS 123456:</span>
+        		<span class="vendor_contract_history_text">This vendor's contract history for </span>
+        		<span class="vendor_contract_history_naics"></span>
         	</div><!--end vendor_contract_history_title_container<!-->
 
         	
