--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -702,4 +702,11 @@ a.pool_link {
     background-color:#eeeeee;
 }
 
+#ch_table td.h_date_signed, #ch_table td.value {
+    text-align:right;
+    padding-right: 15px;
 }
+}
+
+
+
