added commas to dollar amounts and ($) to value header

--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -108,7 +108,7 @@
                             Type
                         </td>
                         <td class="h_value">
-                            Value
+                            Value ($)
                         </td>
                         <td class="h_email_poc">
                             Email POC
