--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -78,9 +78,10 @@
         */
         </style>
 
+
+        <script type="text/javascript" src="{% static "mirage_site/js/mediator.min.js" %}"></script>
         {% block page_js %}
         {% endblock %}
-        <script type="text/javascript" src="{% static "mirage_site/js/base.js" %}"></script>
     </body>
 
 </html>
