--- a/mirage_site/templates/index.html
+++ b/mirage_site/templates/index.html
@@ -14,5 +14,5 @@
 {% endblock %}
 
 {% block page_js %}
-<script type="text/javascript" src="{% static "mirage_site/js/index.js" %}"></script>
+<script type="text/javascript" src="{% static "mirage_site/js/new-index.js" %}"></script>
 {% endblock %}
