--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="{% static "mirage_site/js/jquery-2.1.1.min.js" %}"></script>
         <script type="text/javascript" src="{% static "mirage_site/js/select2.min.js" %}"></script>
         <script type="text/javascript" src="{% static "mirage_site/js/history.js/scripts/bundled/html4+html5/jquery.history.js" %}"></script>
+        <script type="text/javascript" src="{% static "mirage_site/js/new-index.js" %}"></script>
 
 
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
