break objs up into files

--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -12,6 +12,11 @@
         <script type="text/javascript" src="{% static "mirage_site/js/jquery-2.1.1.min.js" %}"></script>
         <script type="text/javascript" src="{% static "mirage_site/js/select2.min.js" %}"></script>
         <script type="text/javascript" src="{% static "mirage_site/js/history.js/scripts/bundled/html4+html5/jquery.history.js" %}"></script>
+        <script type="text/javascript" src="{% static "mirage_site/js/input-handler.js" %}"></script>
+        <script type="text/javascript" src="{% static "mirage_site/js/results-manager.js" %}"></script>
+        <script type="text/javascript" src="{% static "mirage_site/js/layout-manager.js" %}"></script>
+        <script type="text/javascript" src="{% static "mirage_site/js/url-manager.js" %}"></script>
+
         <script type="text/javascript" src="{% static "mirage_site/js/new-index.js" %}"></script>
 
 
