breaking out page-specific functions

--- a/mirage_site/templates/index.html
+++ b/mirage_site/templates/index.html
@@ -14,4 +14,5 @@
 {% endblock %}
 
 {% block page_js %}
+    <script type="text/javascript" src="{% static "mirage_site/js/results-manager-vendors.js" %}"></script>
 {% endblock %}
