--- a/mirage_site/templates/pool.html
+++ b/mirage_site/templates/pool.html
@@ -40,4 +40,6 @@
 {% endblock %}
 
 {% block page_js %}
+    <script type="text/javascript" src="{% static "mirage_site/js/layout-manager-pool.js" %}"></script>
+    <script type="text/javascript" src="{% static "mirage_site/js/results-manager-vendors.js" %}"></script>
 {% endblock %}
