handling zero results

--- a/mirage_site/templates/index.html
+++ b/mirage_site/templates/index.html
@@ -15,4 +15,5 @@
 
 {% block page_js %}
     <script type="text/javascript" src="{% static "mirage_site/js/results-manager-vendors.js" %}"></script>
+    <script type="text/javascript" src="{% static "mirage_site/js/layout-manager-pool.js" %}"></script>
 {% endblock %}
