--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -13,11 +13,11 @@
         <script type="text/javascript" src="{% static "mirage_site/js/select2.min.js" %}"></script>
         <script type="text/javascript" src="{% static "mirage_site/js/history.js/scripts/bundled/html4+html5/jquery.history.js" %}"></script>
         <script type="text/javascript" src="{% static "mirage_site/js/input-handler.js" %}"></script>
-        <script type="text/javascript" src="{% static "mirage_site/js/results-manager.js" %}"></script>
+        <script type="text/javascript" src="{% static "mirage_site/js/requests-manager.js" %}"></script>
         <script type="text/javascript" src="{% static "mirage_site/js/layout-manager.js" %}"></script>
         <script type="text/javascript" src="{% static "mirage_site/js/url-manager.js" %}"></script>
 
-        <script type="text/javascript" src="{% static "mirage_site/js/new-index.js" %}"></script>
+        <script type="text/javascript" src="{% static "mirage_site/js/index.js" %}"></script>
 
 
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
