--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -50,8 +50,8 @@
 
             <div id="header">
                 <div id="page_title">
-                    <a href="/"><span class="oasis_title">OASIS Market Research Tool</span></a>
-                    <span class="oasis_subtitle">find vendors by NAICS with the socioeconomic factors you need</span>
+                    <a href="/"><span class="oasis_title">MIRAGE</span></a>
+                    <span class="oasis_subtitle">OASIS Market Research</span>
                 </div><!--end page_title<!-->
                 {% block header %}    
                 {% endblock header %}
