--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -142,6 +142,12 @@ h3 {
     background:url(/static/mirage_site/images/filter_bg.jpg);
     padding-top:20px;
 }
+#combined_search_pool    {
+    width:1100px;
+    min-height:80px;
+    background:url(/static/mirage_site/images/filter_bg.jpg);
+    padding-top:20px;
+}
 #vehicle_select   {
     float:left;
     margin-left:27px;
@@ -157,7 +163,8 @@ h3 {
     background:url(/static/mirage_site/images/2.png);
     background-repeat: no-repeat;
     background-position: 0px 5px;
-  
+    width:437px;
+
 }
 .select_text    {
     color:#FFF;
@@ -210,37 +217,61 @@ h3 {
 }
 #main_container  {
     float:left;
-    width:920px;
+    width:1100px;
     overflow: ;
 }
 #custom_page_content  {
-    width:920px;
-    padding-left:25px;
+    width:1100px;
+    padding-left:30px;
+    padding-right:30px;
 }
 
 
 
 /* Initial Search Results Styles */
 #results_sam_container {
-    width:100%;
+    width:1050px;
     background-color:;
-    height:42px;
+    min-height:42px;
     border-top: 1px solid #eeeeee;
     padding-top:13px;
+    margin-left:25px;
+
+}
+#results_pool_name_number   {
+    padding-bottom:7px;
+    width:100%;
+    padding-right:25px;
+    border-bottom: 1px solid #eeeeee;
+}
+.results_pool_name_number_search    {
+    color:#CCCCCC;
+    font-size:1.3em;
+    font-style: italic;
+}
+.results_pool_name_number_pool    {
+    font-size:1.6em;
+    font-weight:600;
+}
+.results_pool_name_number_description    {
+    font-size:1.5em;
+    font-weight:600;
+    line-height: .9em;
+    color:#666666;
 }
 #number_of_results  {
     width:650px;
-    float:left;
-    padding-right:10px;
-    padding-left:10px;
-    font-size: 1.5em;
-    height:30px;
-    padding-left:25px;
+    
+    font-size: 1em;
+    min-height:20px;
     background-color: ;
-    color:#410000;
+    color:#3d7190;
     font-weight:600;
+    display:block;
+
+
 }
-#matching_your_search   {
+.matching_your_search   {
 }
 #sam_last_updated   {
     width:240px;
@@ -263,7 +294,7 @@ h3 {
     margin-bottom:5px;
     font-size:.9em;
     margin-top:4px;
-    border-bottom: 1px solid #eeeeee;
+   
     display:none;
 }
 .your_search_grey   {
