--- a/mirage_site/templates/search_base.html
+++ b/mirage_site/templates/search_base.html
@@ -54,13 +54,22 @@
 
     <div id="results_sam_container">
 
+        <div id="results_pool_name_number">
+            <span class="results_pool_name_number_search">search results:</span><br>
+            <span class="results_pool_name_number_pool">Pool 1:</span>
+            <span class="results_pool_name_number_description">Research and Development in Space Vehicles and Guided Missiles, their Propulsion Units, and their Auxiliary Equipment Parts</span>
+
         <div id="number_of_results">
             <span class="matching_your_search"></span>
         </div><!--end number_of_results<!-->
 
-        <div id="sam_last_updated">
+        </div><!--end results_pool_name_number<!-->
+
+
+
+<!--         <div id="sam_last_updated">
             <span id="sam_load" class="sam_style"></span>
-        </div><!--end sam_last_updated<!-->
+        </div><!end sam_last_updated<!--> 
 
     <!--end results_sam_container<!-->
 
