--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -2,18 +2,11 @@
 {% load staticfiles %}
 
 {% block header %}
+<div id="combined_search_pool">
 
-<div id="breadcrumb_container">
-    <div id="breadcrumbs">
-        <ul id="crumbs">
 
-    <li><a href="/">Home</a></li>
-    <li class="crumb_nonactive">Search Results</a></li>
-    <li class="crumb_nonactive">Pool {{ pool_number }}</li>
-    <li id="vendor_breadcrumb"></li>
 
-    </div><!--end breadcrumbs<!-->
- </div><!--end breadcrumb_container<!-->
+</div><!--end combined_search<!-->
 {% endblock header %}
 
 {% block body %}
@@ -65,7 +58,6 @@
 
         	<div id="vendor_admin_c2">
         		<div id="vendor_c1_info">
-        			<p class="admin_title">Vendor Admin Information</p>
         			<p class="lh"><span class="admin_label">DUNS:</span> <span class="duns_number admin_data"></span></p>
         			<p class="lh"><span class="admin_label">CAGE Code:</span> <span class="cage_code admin_data"></span></p>
         			<p class="lh"><span class="admin_label">Employees:</span> <span class="number_of_employees admin_data"></span></p>
@@ -74,7 +66,7 @@
         	</div><!--end vendor_admin_c2<!-->
 
         	<div id="vendor_admin_c3">
-        			<p class="admin_title">Vendor Contact Information</p>
+        			<p class="admin_title">OASIS POC</p>
         		    <p class="lh"><span class="admin_label"></span><span class="vendor_address1 admin_data2"></span></p>
         		    <p class="lh"><span class="admin_label"></span><span class="vendor_address2 admin_data2"></span></p>
         			<p class="lh"><span class="admin_label"></span><span class="vendor_poc_name admin_data2"></span></p>
