--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -4,7 +4,9 @@
 {% block header %}
 <div id="combined_search_pool">
 
-
+    <a href="javascript:history.go(-1)"><div id="vendor_back_button">
+        <span class="back_text">Back to search results</span>
+    </div></a>
 
 </div><!--end combined_search<!-->
 {% endblock header %}
