--- a/mirage_site/templates/search_base.html
+++ b/mirage_site/templates/search_base.html
@@ -62,7 +62,7 @@
         <div id="number_of_results">
             <span class="matching_your_search"></span>
         </div><!--end number_of_results<!-->
-
+             <a href="#"><div id="download_data_results">download data (CSV)</div></a>
         </div><!--end results_pool_name_number<!-->
 
 
