--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -56,6 +56,8 @@
             </div>
             
         		</div><!--end vendor_socioeconomic_table_container<!-->
+
+                <a href="#"><div id="download_data">download vendor data (CSV)</div></a>
         	</div><!--end vendor_admin_c1<!-->
 
         	<div id="vendor_admin_c2">
