start landing pg html

--- a/mirage_site/templates/search_base.html
+++ b/mirage_site/templates/search_base.html
@@ -57,7 +57,7 @@
         <div id="results_pool_name_number">
             <span class="results_pool_name_number_search">search results:</span><br>
             <span class="results_pool_name_number_pool">Pool 1:</span>
-            <span class="results_pool_name_number_description">Research and Development in Space Vehicles and Guided Missiles, their Propulsion Units, and their Auxiliary Equipment Parts</span>
+            <span class="results_pool_name_number_description">Research and Development in Space Vehicles and Guided Missiles...</span>
 
         <div id="number_of_results">
             <span class="matching_your_search"></span>
@@ -72,6 +72,34 @@
         </div><!end sam_last_updated<!--> 
 
     <!--end results_sam_container<!-->
+
+
+    <!-- BEGIN LANDING HTML -->
+        <div id="about_oasis">
+            <h1>About OASIS</h1>
+
+            <h3>The OASIS Family of Contract Vehicles</h3>
+                <p class="about_oasis_text">
+                Specifically designed for the acquisition of professional services
+                Enables the use of ANY contract type 
+                Separated into unrestricted (OASIS) and Small Business (OASIS SB) to make it easy to reserve task orders for small business categories
+                All vendors have DCAA-vetted financial systems
+                </p>
+
+                <h3>What are Pools?</h3>
+                <p class="about_oasis_text">
+                OASIS spans seven major functional categories that are referred to as pools. 
+                Each pool is it’s own IDIQ contract: Therefore you may only publish a solicitation to one of these categories. 
+                If your contracting need spans multiple categories, choose the one that contains the preponderance of your work. Selecting the most relevant NAICS code above will guide you to the correct pool.
+
+            </p>
+        </div><!--end about_oasis<!-->
+
+        <div id="data_sources">
+            <h1>Data Sources</h1>
+        </div><!--end data_sources<!-->
+    <!-- END LANDING HTML -->    
+
 
 </div><!--end main_container<!-->
 
