--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -244,7 +244,16 @@ h3 {
     padding-left:30px;
     padding-right:30px;
 }
-
+#about_oasis    {
+    float:left;
+    width:400px;
+    margin-left:90px;
+}
+#data_sources   {
+    float:left;
+    width:400px;
+    margin-left:90px;
+}
 
 /* Initial Search Results Styles */
 #results_sam_container {
