--- a/mirage_site/templates/search_base.html
+++ b/mirage_site/templates/search_base.html
@@ -54,16 +54,8 @@
 
     <div id="results_sam_container">
 
-        <div id="results_pool_name_number">
-            <span class="results_pool_name_number_search">search results:</span><br>
-            <span class="results_pool_name_number_pool">Pool 1:</span>
-            <span class="results_pool_name_number_description">Research and Development in Space Vehicles and Guided Missiles...</span>
-
-        <div id="number_of_results">
-            <span class="matching_your_search"></span>
-        </div><!--end number_of_results<!-->
-             <a href="#"><div id="download_data_results">download data (CSV)</div></a>
-        </div><!--end results_pool_name_number<!-->
+    {% block search_info %}
+    {% endblock %}
 
 
 
