--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -299,9 +299,40 @@ h3 {
 }
 #footer {
     min-height:150px;
+    width:1100px;
     background:url(/static/mirage_site/images/footer_bg.png);
     background-repeat: repeat;
+    margin-left:auto;
+    margin-right:auto;
+   
 }
+#footer_nav {
+    margin-left:100px;
+    padding-top:20px;
+    color:#FFF;
+    list-style-type: none;
+    float:left;
+
+}
+#footer_nav a {
+    color:#FFF;
+    list-style-type: none;
+}
+.logo1   {
+    margin-left:400px;
+    float:left;
+    padding-top:30px;
+}
+.logo2   {
+    margin-left:30px;
+    float:left;
+    padding-top:30px;
+}
+#landing    {
+    min-height:700px;
+    width:1100px;
+}
+
 /* Initial Search Results Styles */
 #results_sam_container {
     width:1050px;
