--- a/mirage_site/templates/index.html
+++ b/mirage_site/templates/index.html
@@ -6,6 +6,55 @@
 {% endblock %}
 
 {% block content %}
+                    <!-- BEGIN LANDING HTML -->
+    <div id="landing">
+        <div id="about_oasis">
+            <h1>About OASIS</h1>
+
+            <h3>The OASIS Family of Contract Vehicles</h3>
+                
+                <ul class="about_oasis_text">
+                    <li>Specifically designed for the acquisition of professional services</li>
+                    <li>Enables the use of ANY contract type </li>
+                    <li>Separated into unrestricted (OASIS) and Small Business (OASIS SB) to make it easy to reserve task orders for small business categories</li>
+                    <li>All vendors have DCAA-vetted financial systems</li>
+                </ul>
+                
+
+                <h3>What are Pools?</h3>
+                    <ul class="about_oasis_text">
+                        <li>OASIS spans seven major functional categories that are referred to as pools. </li>
+                        <li>Each pool is it’s own IDIQ contract: Therefore you may only publish a solicitation to one of these categories. </li>
+                        <li>If your contracting need spans multiple categories, choose the one that contains the preponderance of your work. Selecting the most relevant NAICS code above will guide you to the correct pool.</li>
+                    </ul>
+            </p>
+        </div><!--end about_oasis<!-->
+
+        <div id="data_sources">
+            <h1>Data Sources</h1>
+            <div id="data_sources_last_updated">last updated</div>
+
+            <div class="data_sources_row">
+                <span class="data_source_name">SAM</span>
+                <span id="data_source_date_sam">1/2/2014</span>
+                <span class="data_source_description"><br>We pull SAM data directly from the SAM API to populate XYZ</span>
+            </div><!--end data_sources_row<!-->
+
+            <div class="data_sources_row">
+                <span class="data_source_name">FPDS</span>
+                <span id="data_source_date_fpds">1/2/2014</span>
+                <span class="data_source_description"><br>We pull SAM data directly from the SAM API to populate XYZ</span>
+            </div><!--end data_sources_row<!-->
+
+            <div class="data_sources_row">
+                <span class="data_source_name">FAPIIS</span>
+                <span id="data_source_date_sam">1/2/2014</span>
+                <span class="data_source_description"><br>We pull SAM data directly from the SAM API to populate XYZ</span>
+            </div><!--end data_sources_row<!-->
+
+        </div><!--end data_sources<!-->
+    </div><!--end landing<!-->
+    <!-- END LANDING HTML -->    
 {% endblock %}
 
 {% block page_js %}
