--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -77,7 +77,20 @@
 
         </div><!--end container<!-->
 
+            <div class="cf"></div>
 
+            <div id="footer">
+                <div id="footer_nav">
+                <ul>
+                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#">METHODOLOGY</a></li>
+                    <li><a href="#">OASIS PROGRAM HOME</a></li>
+                </ul>
+                </div><!--end footer_nav<!-->
+
+                <a href="#"><div class="logo1"><img src="/static/mirage_site/images/logo-18f.png"></div></a>
+                <a href="#"><div class="logo2"><img src="/static/mirage_site/images/gsa_logo.jpg"></div></a>
+            </div><!--end footer<!-->
 
         <style>
         /*  #naics-code { width: 100%; }
