--- a/mirage_site/templates/pool.html
+++ b/mirage_site/templates/pool.html
@@ -1,17 +1,11 @@
 {% extends "search_base.html" %}
 {% load staticfiles %}
 
-{% block crumbs %}
-    <li><a href="/">Home</a></li>
-    <li class="crumb_nonactive">Search Results</li>
-    <li>Pool {{ pool_number }}</li>
-{% endblock %}
-
 {% block search_info %}
         <div id="results_pool_name_number">
             <span class="results_pool_name_number_search">search results:</span><br>
-            <span class="results_pool_name_number_pool">Pool 1:</span>
-            <span class="results_pool_name_number_description">Research and Development in Space Vehicles and Guided Missiles...</span>
+            <span class="results_pool_name_number_pool"></span>
+            <span class="results_pool_name_number_description"></span>
 
         <div id="number_of_results">
             <span class="matching_your_search"></span>
@@ -22,9 +16,9 @@
 
 {% block content %}
 <div id="your_search_criteria">
-    <span class="your_search_grey">showing vendors in: </span><span id="your_search" class="your_search_blue">541330 - Engineering Services</span>
+    <span class="your_search_grey">showing vendors in: </span><span id="your_search" class="your_search_blue"></span>
 
-    <span class="your_search_grey">filters: </span><span id="your_filters" class="your_search_blue">veteran owned, hubzone</span>
+    <span class="your_search_grey">filters: </span><span id="your_filters" class="your_search_blue"></span>
 </div>
 <div id="pool_table" class="pooldetail">
                 <table id="pool_vendors">
