--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -248,7 +248,7 @@ h3 {
 #about_oasis    {
     float:left;
     width:430px;
-    margin-left:40px;
+    margin-left:60px;
 }
 #about_oasis h3   {
     font-weight: 600;
@@ -360,7 +360,6 @@ h3 {
 #results_sam_container {
     width:1050px;
     background-color:;
-    min-height:42px;
     border-top: 1px solid #eeeeee;
     padding-top:13px;
     margin-left:25px;
@@ -669,7 +668,7 @@ a.pool_link {
     display:block;
 }
 .vendor_contract_history_text {
-    width:100%;
+    
     display:inline;
     font-size:1.4em;
 }
@@ -679,7 +678,56 @@ a.pool_link {
     font-size:1.4em;
     font-weight:bold;
 }
-
+.contracts_button_active {
+    display: inline-block;
+    background: #e4e4e4;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f6f6f6), color-stop(100%,#d7d7d7));
+    background: -moz-linear-gradient(center top, #f6f6f6 0%, #d7d7d7 100%);
+    -webkit-box-shadow: -1px 1px 0px 0px #dfdcdc inset, 1px -1px 0px 0px #bfbfbf inset;
+    -moz-box-shadow: -1px 1px 0px 0px #dfdcdc inset, 1px -1px 0px 0px #bfbfbf inset;
+    box-shadow: -1px 1px 0px 0px #dfdcdc inset, 1px -1px 0px 0px #bfbfbf inset;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    padding: 0px 10px;
+    display: inline-block;
+    font-family: arial;
+    font-size: 14px;
+    line-height: 30px;
+    color: #595959;
+    font-weight: bold;
+}
+.contracts_button {
+    display: inline-block;
+    background: #eaeaea;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#f8f8f8));
+    background: -moz-linear-gradient(center top, #f6f6f6 0%, #d7d7d7 100%);
+    box-shadow: 0px 0px 0px 1px #eaeaea inset;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    padding: 0px 10px;
+    display: inline-block;
+    font-family: arial;
+    font-size: 14px;
+    line-height: 30px;
+    color: #bfbfbf;
+    font-weight: bold;
+    
+}
+.contracts_button:hover {
+    -webkit-box-shadow: 0px 0px 0px 1px #a8a8a8 inset, 1px 1px 4px 0px #bababa;
+    -moz-box-shadow: 0px 0px 0px 1px #a8a8a8 inset, 1px 1px 4px 0px #bababa;
+    box-shadow: 0px 0px 0px 1px #a8a8a8 inset, 1px 1px 4px 0px #bababa;
+    color: #424242;
+    
+}
+.contracts_button:active {
+    background: #e6e6e6;
+    -webkit-box-shadow: 0px 1px 5px 0px #808080 inset;
+    -moz-box-shadow: 0px 1px 5px 0px #808080 inset;
+    box-shadow: 0px 1px 5px 0px #808080 inset;
+}
 
 
 
