--- a/mirage_site/templates/pool.html
+++ b/mirage_site/templates/pool.html
@@ -10,7 +10,7 @@
         <div id="number_of_results">
             <span class="matching_your_search"></span>
         </div><!--end number_of_results<!-->
-             <a href="#"><div id="download_data_results">download data (CSV)</div></a>
+             <a id="csv_link" href="#"><div id="download_data_results">download data (CSV)</div></a>
         </div><!--end results_pool_name_number<!-->
 {% endblock %}
 
