--- a/mirage_site/templates/pool.html
+++ b/mirage_site/templates/pool.html
@@ -11,7 +11,9 @@
         <div id="results_pool_name_number">
             <span class="results_pool_name_number_search">search results:</span><br>
             <span class="results_pool_name_number_pool">Pool 1:</span>
-            <span class="results_pool_name_number_description">Research and Development in Space Vehicles and Guided Missiles...</span>
+            <span class="results_pool_name_number_description">Research and Development in Space Vehicles and Guided Missiles lorem ipsum lorem ipsum 12345 lorem</span>
+
+            <div class="truncate">Research and Development in Space Vehicles and Guided Missiles lorem ipsum lorem ipsum 12345 lorem</div>
 
         <div id="number_of_results">
             <span class="matching_your_search"></span>
