--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -57,7 +57,7 @@
             
         		</div><!--end vendor_socioeconomic_table_container<!-->
 
-                <a href="#"><div id="download_data">download vendor data (CSV)</div></a>
+                <a id="csv_link" href="#"><div id="download_data">download vendor data (CSV)</div></a>
         	</div><!--end vendor_admin_c1<!-->
 
         	<div id="vendor_admin_c2">
