--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -139,8 +139,9 @@ h3 {
 #combined_search    {
     width:1100px;
     min-height:180px;
-    background:url(/static/mirage_site/images/filter_bg.jpg);
+    /*background:url(/static/mirage_site/images/filter_bg.jpg);*/
     padding-top:20px;
+    background-color: #2d5872;
 }
 #combined_search_pool    {
     width:1100px;
@@ -158,8 +159,8 @@ h3 {
 }
 .back_text  {
     color:#FFF;
-    font-size:2.1em;
-    font-weight:600;
+    font-size:1.4em;
+    font-weight:500;
 }
 .back_text a:hover {
     color:#FFF;
@@ -301,20 +302,21 @@ h3 {
 #footer {
     min-height:150px;
     width:1100px;
-    background:url(/static/mirage_site/images/footer_bg.png);
+    /*background:url(/static/mirage_site/images/footer_bg.png);*/
     background-repeat: repeat;
     margin-left:auto;
     margin-right:auto;
     margin-top:30px;
-    
+    background-color: #1f323d;
    
 }
 #footer_nav {
-    margin-left:100px;
-    padding-top:24px;
+    margin-left:20px;
+    padding-top:34px;
     color:#FFF;
     list-style-type: none;
     float:left;
+    
 
 }
 #footer_nav a {
@@ -324,9 +326,10 @@ h3 {
 #footer_nav ul {
     color:#FFF;
     list-style-type: none;
+    font-weight:300;
 }
 .logo1   {
-    margin-left:400px;
+    margin-left:550px;
     float:left;
     padding-top:30px;
 }
@@ -335,6 +338,7 @@ h3 {
     float:left;
     padding-top:30px;
 }
+
 #landing    {
     min-height:700px;
     width:1100px;
