--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -82,9 +82,8 @@
             <div id="footer">
                 <div id="footer_nav">
                 <ul>
-                    <li><a href="#">CONTACT</a></li>
-                    <li><a href="#">METHODOLOGY</a></li>
-                    <li><a href="#">OASIS PROGRAM HOME</a></li>
+                    <li><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></li>
+                    <li><a href="https://github.com/18F/mirage/">Check out our code on GitHub</a></li>
                 </ul>
                 </div><!--end footer_nav<!-->
 
