'disable' title and indicator names

--- a/mirage_site/templates/search_base.html
+++ b/mirage_site/templates/search_base.html
@@ -23,7 +23,7 @@
 
 
     <div id="filter_container">
-        <span class="select_text">Choose filters (optional)</span>
+        <span class="select_text" id="choose_filters">Choose filters (optional)</span>
         <div id="filter" class="filterbox">
             <form id="setaside-filters" class="pure-form pure-form-stacked">
                 <fieldset>
