--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -54,12 +54,15 @@
         <div id="container">
 
             <div id="header">
+            <div id="header_link"><a href="#">OASIS Program Home</a></div>
                 <div id="page_title">
                     <a href="/"><span class="oasis_title">MIRAGE</span></a>
                     <span class="oasis_subtitle">OASIS Market Research</span>
+
                 </div><!--end page_title<!-->
                 {% block header %}    
                 {% endblock header %}
+
             </div><!--end header<!-->
 
             
