--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -54,7 +54,7 @@
         <div id="container">
 
             <div id="header">
-            <div id="header_link"><a href="#">OASIS Program Home</a></div>
+            <div id="header_link"><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></div>
                 <div id="page_title">
                     <a href="/"><span class="oasis_title">MIRAGE</span></a>
                     <span class="oasis_subtitle">OASIS Market Research</span>
@@ -85,9 +85,9 @@
             <div id="footer">
                 <div id="footer_nav">
                 <ul>
-                    <li><a href="#">OASIS Program Home</a></li>  
-                    <li><a href="#"><img src="/static/mirage_site/images/github_icon.png">
-                    Check out our code on Github</a></li>                  
+                    <li><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></li>  
+                    <li><a href="https://github.com/18F/mirage"><img src="/static/mirage_site/images/github_icon.png">
+                    Check out our code on GitHub</a></li>                  
                 </ul>
 
                 </div><!--end footer_nav<!-->
