--- a/mirage_site/templates/search_base.html
+++ b/mirage_site/templates/search_base.html
@@ -5,8 +5,8 @@
 
     <div id="vehicle_select">
             <span class="select_text">Select a vehicle</span>
-        <form id="naics-search" class="pure-form">
-            <select id="placeholder">
+        <form id="vehicle-select" class="pure-form">
+            <select id="placeholder" class="vehicle_select_style">
                 <option>OASIS SB</option>
             </select>
         </form>
