--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -150,6 +150,7 @@ h3 {
     /*background:url(/static/mirage_site/images/filter_bg.jpg);*/
     padding-top:20px;
     background-color: #2d5872;
+    border: 1px solid #000;
 }
 #combined_search_pool    {
     width:1100px;
@@ -304,7 +305,7 @@ h3 {
 }
 .data_source_name   {
     display:block;
-    color:#4a84a3;
+    color:#640016;
     font-weight: 600;
     float:left;
 
@@ -422,8 +423,8 @@ h3 {
 .results_pool_name_number_description    {
     font-size:1.6em;
     font-weight:600;
-    line-height: .9em;
-    color:#666666;
+    line-height: 1em;
+    color:#00;
     width: 750px;
     white-space: nowrap;
     overflow: hidden;
@@ -438,7 +439,7 @@ h3 {
     font-size: 1em;
     min-height:20px;
     background-color: ;
-    color:#3d7190;
+    color:#7f7f7f;
     font-weight:600;
     display:block;
 }
