--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -94,7 +94,7 @@
 
 
                 <a href="https://18f.gsa.gov"><div class="logo1"><img src="/static/mirage_site/images/logo-18f.png"></div></a>
-                <a href="www.gsa.gov"><div class="logo2"><img src="/static/mirage_site/images/gsa_logo.jpg"></div></a>
+                <a href="http://www.gsa.gov"><div class="logo2"><img src="/static/mirage_site/images/gsa_logo.jpg"></div></a>
             </div><!--end footer<!-->
 
         <style>
