load proper contract list as defined by querystring

--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -86,8 +86,8 @@
         		<span class="vendor_contract_history_text">Showing this vendor's contract history for: </span>
         		<!-- <span class="vendor_contract_history_naics"></span> -->
 
-                    <a href="#"><div class="contracts_button_active">NAICS 12345</div></a>
-                    <a href="#"><div class="contracts_button">All Contracts</div></a>
+                    <a href="#"><div id="naics_contracts_button" class="contracts_button">NAICS 12345</div></a>
+                    <a href="#"><div id="all_contracts_button" class="contracts_button">All Contracts</div></a>
         	</div><!--end vendor_contract_history_title_container<!-->
 
         	
