--- a/mirage_site/templates/search_base.html
+++ b/mirage_site/templates/search_base.html
@@ -5,7 +5,7 @@
 
     <div id="vehicle_select">
             <span class="select_text">Select a vehicle</span>
-        <form id="vehicle-select" class="pure-form">
+        <form id="vehicle-select">
             <select id="placeholder" class="vehicle_select_style">
                 <option>OASIS SB</option>
             </select>
