--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -294,7 +294,7 @@ h3 {
     margin-top:20px;
 }
 .data_source_description    {
-    color:#999999;
+    color:#6b6b6b;
     display:block;
     
 }
